@@ -72,7 +72,7 @@ MainWindow::MainWindow(QWidget * parent, Qt::WindowFlags f)
 	char* abouttext = (char *) malloc(2048);
 	sprintf(abouttext,"<h2 align='center'>BASIC-256 -- Version %s</h2> \
 	        <p>Copyright &copy; 2006, The BASIC-256 Team</p> \
-	        <p>Please visit our web site at http://kidbasic.sourceforge.net for tutorials and documentation.</p> \
+	        <p>Please visit our web site at http://www.basic256.org for tutorials and documentation.</p> \
 	        <p>Please see the CONTRIBUTORS file for a list of developers and translators for this project.</p>\
 	        <p><i>You should have received a copy of the GNU General Public License along<br> \
 	        with this program; if not, write to the Free Software Foundation, Inc.,<br> \
